manifests/ntfy/ntfy-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
  labels:
    app: ntfy
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ntfy-pod
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ntfy-pod
    spec:
      containers:
        - name: ntfy
          image: binwiederhier/ntfy:v2.19.2
          args:
            - "serve"
          ports:
            - containerPort: 80
              name: http-ntfy
            - containerPort: 9090
              name: metrics
          livenessProbe:
            httpGet:
              path: /v1/health
              port: http-ntfy
            initialDelaySeconds: 40
            failureThreshold: 3
            periodSeconds: 60
            timeoutSeconds: 10
          resources:
            limits:
              memory: 300Mi
              cpu: 200m
            # requests:
            #   cpu: 150m
            #   memory: 150Mi
          volumeMounts:
            - mountPath: /etc/ntfy/server.yml
              subPath: server.yml
              name: config-volume
              readOnly: true
            - mountPath: /var/cache/ntfy
              name: cache-volume
      volumes:
        - name: config-volume
          configMap:
            name: server-config
        - name: cache-volume
          persistentVolumeClaim:
            claimName: ntfy-pvc
