manifests/ntfy/ntfy-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ntfy-svc
spec:
  type: ClusterIP
  selector:
    app: ntfy-pod
  ports:
    - name: http-ntfy-out
      protocol: TCP
      port: 80
      targetPort: http-ntfy
    - name: ntfy-metrics
      protocol: TCP
      port: 9090
      targetPort: metrics
